[metadata]
name = Flask-MySQLdb
version = file: flask_mysqldb/VERSION
author = Alexandre Ferland
author_email = me@alexferl.com
url = https://github.com/alexferl/flask-mysqldb
description = MySQLdb extension for Flask
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    Flask>=1.0.4
    mysqlclient>=2.2.0
